# kd-reports

./: CMakeLists.txt  kd-reportsConfig.cmake.in
include/KDReports/: KDReports  KDReportsVersion.h
lib/: kdreports2.lib
